# playing_with_cuda_api

./: .gitignore  CMakeLists.txt  hello_thread.cu  main.cu  memory_tracking_and_vector_addition.cu  parallel_reduction.cu  parallelize_prefix_sums.cu  random.cu  random_using_device_api.cu  random_using_host_api.cu  shared_memory.cu  stencils.cu  vector_addition.cu
algorithms/: CMakeLists.txt  k_1d_stencil.cuh  parallel_reduction_samples.cuh  vector_addition.cuh
basics/: CMakeLists.txt  shared_memory_kernels.cuh
helper/: macros.h  memory_tracker.cuh  memory_tracker.h  memory_tracking.h
random_number_generation/: CMakeLists.txt  main.cu
